# s21_sber

./: README.md
C2_s21_SimpleBash/src/cat/: Makefile  cat.sh  s21_cat.c  text.txt
C2_s21_SimpleBash/src/grep/: 2.txt  Makefile  s21_grep.c  s21_grep.h  test.sh
C3_s21_StringPlus/src/: Makefile  s21_string.c  s21_string.gcda  s21_string.gcno  s21_string.h  test  test.c
C4_s21_math/src/: Makefile  s21_fmod.c  s21_math.h  test.c
C6_s21_matrix/src/: Makefile  helpers.c  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c  test.c
C7_SmartCalc_v1.0/src/: Makefile  smart_calc_controller.c  smart_calc_controller.h  test_calc.c
C7_SmartCalc_v1.0/src/mechanic/: calculate.c  calculate.h  deposit_calc.c  deposit_calc.h  input_validation.c  input_validation.h  loan_calc.c  loan_calc.h  shunting_yard.c  stack.c  (+4 more)
CPP1_s21_matrixplus/src/: Makefile  s21_matrix_oop.cpp  s21_matrix_oop.h  test.cpp
CPP2_s21_containers/src/: main_test.h
CPP3_s21_SmartCalc_v2.0/src/: Makefile
CPP4_s21_3DViewer_v2.0/src/: CMakeLists.txt  Doxyfile  makefile
CPP4_s21_3DViewer_v2.0/src/Controller/: s21_controller.cc  s21_controller.h
CPP4_s21_3DViewer_v2.0/src/Model/: s21_loader.cc  s21_loader.h  s21_model.h  s21_transformations.h
CPP4_s21_3DViewer_v2.0/src/View/: gl_widget.cc  gl_widget.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
CPP4_s21_3DViewer_v2.0/src/tests/: test_suite.h  tests_loader.cc  tests_main.cc  tests_transformations.cc
D01_Linux/src/: report.md
D02_LinuxNetwork/src/: report.md
D05_SimpleDocker/src/: Dockerfile  docker-compose.yml  report.md
s21_Python/Python_Bootcamp.Team1/: README.md
s21_SQL/SQL_team0/: README.md
(+310 files in other folders)
